After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788715 - Can't discard all edits directly from the overview without previewing the BaseItem
Can't discard all edits directly from the overview without previewing the Bas...
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.26.x
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-10-09 13:09 UTC by Debarshi Ray
Modified: 2017-10-12 16:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
base-item: Assert that certain operations need a pre-loaded pipeline (3.67 KB, patch)
2017-10-09 13:10 UTC, Debarshi Ray
committed Details | Review
base-item: Process the graph after a revert only if the item is loaded (2.88 KB, patch)
2017-10-09 13:10 UTC, Debarshi Ray
committed Details | Review
base-item: Unbreak reverting directly from OVERVIEW without PREVIEW (1.41 KB, patch)
2017-10-09 13:11 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2017-10-09 13:09:00 UTC
Steps to reproduce:

(a) Edit a BaseItem
(b) Click 'done'
(c) Restart the application
(d) Right-click the same BaseItem from the overview, without previewing it
(e) Open the properties dialog
(f) Click the "discard all edits" button


It leads to a bunch of WARNINGs and CRITICALs:

(gnome-photos:12638): GEGL-WARNING **: Output of gegl:nop 'proxynop-output' 0x7ff0fc026140 has no format

(gnome-photos:12638): GEGL-WARNING **: Output of gegl:nop 'proxynop-output' 0x7ff0fc026140 has no format

** (gnome-photos:12638): CRITICAL **: photos_base_item_pipeline_save_async: assertion 'priv->edit_graph != NULL' failed

The thumbnail is not updated, and if the application is restarted the old edits are still present.
Comment 1 Debarshi Ray 2017-10-09 13:10:16 UTC
Created attachment 361184 [details] [review]
base-item: Assert that certain operations need a pre-loaded pipeline
Comment 2 Debarshi Ray 2017-10-09 13:10:48 UTC
Created attachment 361185 [details] [review]
base-item: Process the graph after a revert only if the item is loaded
Comment 3 Debarshi Ray 2017-10-09 13:11:19 UTC
Created attachment 361186 [details] [review]
base-item: Unbreak reverting directly from OVERVIEW without PREVIEW
Comment 4 Debarshi Ray 2017-10-12 16:07:24 UTC
Pushed to master. Let me know if there is something wrong.