base-item: Assert that certain operations need a pre-loaded pipeline

https://bugzilla.gnome.org/show_bug.cgi?id=788715